# sqweel

./: Cargo.toml  README.md  build.rs  flake.nix
examples/: gui_smoke.rs  lsp_smoke.rs  sql_smoke.rs
resources/: main_view.blp  resources.gresource.xml  result_grid.blp  sql_view.blp  style.css  table_view.blp  window.blp
src/: completion.rs  lib.rs  lsp.rs  main.rs  main_view.rs  result_grid.rs  row_object.rs  runtime.rs  sql_view.rs  store.rs  table_view.rs  window.rs
src/db/: error.rs  mod.rs  postgres.rs  registry.rs  traits.rs  types.rs
tests/: pg_integration.rs  store_roundtrip.rs
